--- a/templates/profile.html
+++ b/templates/profile.html
@@ -456,7 +456,10 @@ code {
     border-style: solid;
     border-width: 1px;
 }
+.bottom{
 
+    font-size: small;
+}
 /** focus mode */
 .on-focus-mode blockquote {
     border-left-color: rgba(85, 85, 85, 0.12);
@@ -519,5 +522,12 @@ header, .context-menu, .megamenu-content, footer{
 <em><span>项目地址：</span><a href='https://git.io/novel-spider'><span>git.io/novel-spider</span></a></em></p></li><li><h5><a name="个人博客系统-----------------------------------------------------------------------------------------------------------------------------------------------2019年4月" class="md-header-anchor"></a><span>个人博客系统                                                                                                                                               2019年4月</span></h5><p><span>基于Django开发，当作个人博客使用，现为个人简历页（</span><a href='https://leoqin.fun/'><span>点我访问</span></a><span>）。</span>
 <em><span>项目地址：</span><a href='https://git.io/csqin-blog'><span>git.io/csqin-blog</span></a></em></p></li><li><h5><a name="气旋可视化系统-------------------------------------------------------------------------------------------------------------------------------------------2018年9月" class="md-header-anchor"></a><span>气旋可视化系统                                                                                                                                           2018年9月</span></h5><p><span>基于Tornado+百度地图API+Echart.js，实现时空下气旋的轨迹绘制以及风速压强等数据可交互展示。</span>
 <em><span>项目地址：</span><a href='https://git.io/cyclone-vis'><span>git.io/cyclone-vis</span></a></em></p></li><li><h5><a name="基于七大排序算法的动态演示系统------------------------------------------------------------------------------------------------------------2018年5月" class="md-header-anchor"></a><span>基于七大排序算法的动态演示系统                                                                                                            2018年5月</span></h5><p><span>基于ASP.NET+C#，实现七大排序算法过程的动态演示及时间复杂度展示。</span></p></li></ul><h3><a name="演讲和论文" class="md-header-anchor"></a><span>演讲和论文</span></h3><hr /><ul><li><span>2019年BigCOM（The 5th International Conference on Big Data Computing and  Communications）大会论文演讲：</span><a href='https://git.io/BigCOM2019'><span>Shipborne Robust Message Queuing Service  Prototype System</span></a></li><li><span>J. Yongguo, L. Qiang, </span><strong><span>Q. Changshuai</span></strong><span>, S. Jian, and L. Qianqian, &quot;</span><a href='https://ieeexplore.ieee.org/document/8905013'><span>Message-oriented Middleware: A Review</span></a><span>,&quot; presented at the 2019 5th International Conference on Big Data Computing and Communications (BIGCOM), 2019.</span></li><li><span>Y. Jiang, Q. Liu, Q. Liu, J. Su, and </span><strong><span>C. Qin</span></strong><span>, &quot;</span><a href='https://ieeexplore.ieee.org/document/8905037'><span>Shipborne Robust Message Queuing Service Prototype System</span></a><span>,&quot; presented at the 2019 5th International Conference on Big Data Computing and Communications (BIGCOM), 2019. </span></li></ul></div>
+
+<div class = "bottom" align="center" >
+    <div class="website-introduction" >© 2019-2020 秦昌帅的个人简历</div>
+    <div class="backup-website">
+        <a  href="http://www.beian.miit.gov.cn" target="_blank">鲁ICP备19031295号-1</a>
+    </div>
+</div>
 </body>
 </html>
