--- a/templates/shenpi.html
+++ b/templates/shenpi.html
@@ -8,26 +8,53 @@
               入校时间
         </span> <!----></div> <!----> <div class="plugin-allbox"><div data-key="Calendar_37" class="dplugin-box" style="margin-top: 0px; margin-bottom: 0px; text-align: left;"><div class="dplugin-mobile dplugin-mobile-dCalendar dCalendar-vie" style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;"><span style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;"><div id = "time"></div></span></div></div> <!----></div></div><div><div class="pluginnames"><span>
               头像
-            </span> <!----></div> <!----> <div class="plugin-allbox"><div data-key="Avatar_25" class="dplugin-box" style="margin-top: 0px; margin-bottom: 0px; text-align: center;"><div class="dplugin-mobile dplugin-mobile-dAvatar"><div class="dplugin-mobile-addfileed-box" style="height: 2.05rem; width: 1.5rem;"><!----> <div class="dplugin-mobile-addfileed"><img width="100%" height="100%" src="https://imgshenpi.ouc.edu.cn/avatarNew/21180231272.jpg"></div></div> <!----> <div class="clear"></div></div> <!----> <!----></div> <!----></div></div><div><div class="pluginnames"><span>
+            </span>
+    <!---->
+</div>
+    <!---->
+    <div class="plugin-allbox"><div data-key="Avatar_25" class="dplugin-box" style="margin-top: 0px; margin-bottom: 0px; text-align: center;">
+    <div class="dplugin-mobile dplugin-mobile-dAvatar"><div class="dplugin-mobile-addfileed-box" style="height: 2.05rem; width: 1.5rem;">
+        <!---->
+        <div class="dplugin-mobile-addfileed"><img width="100%" height="100%" src="https://imgshenpi.ouc.edu.cn/avatarNew/{{ sno }}.jpg">
+        </div>
+</div>
+        <!---->
+        <div class="clear"></div></div> <!----> <!----></div> <!----></div></div><div><div class="pluginnames"><span>
               通行码
             </span> <!----></div> <!----> <div class="plugin-allbox" plugin="[object Object]"><div data-key="Qrcode_27" class="dplugin-box" style="margin-top: 0px; margin-bottom: 0px; width: 100%; text-align: center; height: 100%; overflow-x: auto;"><div class="dplugin-mobile"><img src="../static/need_files/qr_code.png" height="100" width="100" style="height: 100px; width: 100px;"></div></div> <!----></div></div><div><div class="pluginnames"><span>
               姓名，学院，通行门
-            </span> <!----></div> <!----> <div class="plugin-allbox dplugin-mobile-rinput"><div data-key="Input_29" class="dplugin-box" style="margin-top: 0px; margin-bottom: 0px; text-align: left;"><div class="dplugin-mobile dplugin-mobile-dinput dinput-vie dplugin-mobile-dinput-focusalert" style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;"><span style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;">秦昌帅，信息科学与工程学院，崂山南门（学生）出</span></div></div> <!----></div></div><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----> <div style="display: none;"><ul><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><span>数据源：</span> <div data-key="DataSource_34" class="dplugin-box" plugin="[object Object]" style="margin-top: 0px; margin-bottom: 0px; text-align: left;"><div><div class="el-dialog__wrapper" style="display: none;"><div role="dialog" aria-modal="true" aria-label="同步数据" class="el-dialog el-dialog--center rTbaleDialog" style="margin-top: 15vh; width: 90%;"><div class="el-dialog__header"><span class="el-dialog__title">同步数据</span><!----></div><!----><div class="el-dialog__footer"><span class="dialog-footer"><button type="button" class="el-button el-button--default"><!----><!----><span>取 消</span></button> <button type="button" class="el-button el-button--primary"><!----><!----><span>确 定</span></button></span></div></div></div></div></div></li><li><span>逻辑显隐：</span> <div data-key="ShowHide_35" class="dplugin-box" plugin="[object Object]" style="margin-top: 0px; margin-bottom: 0px; text-align: left;"><!----></div></li><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <!----></div> <!----></div> <div class="wxformbtn m_start_btn"><!----> <div class="wxformbtn_center"><!----></div> <!----></div></div> </div>
+            </span>
+    <!---->
+</div>
+    <!---->
+    <div class="plugin-allbox dplugin-mobile-rinput">
+        <div data-key="Input_29" class="dplugin-box" style="margin-top: 0px; margin-bottom: 0px; text-align: left;">
+            <div class="dplugin-mobile dplugin-mobile-dinput dinput-vie dplugin-mobile-dinput-focusalert" style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;">
+                <span style="font-size: 19px; font-family: 微软雅黑; font-weight: bold; font-style: normal; color: rgb(96, 98, 102); text-decoration: none; text-align: left; line-height: 20px; letter-spacing: 0px;">
+                    {{ name }}，信息科学与工程学院，{{ door }}（学生）{{ go }}
+                </span>
+            </div></div> <!----></div></div><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----> <div style="display: none;"><ul><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><span>数据源：</span> <div data-key="DataSource_34" class="dplugin-box" plugin="[object Object]" style="margin-top: 0px; margin-bottom: 0px; text-align: left;"><div><div class="el-dialog__wrapper" style="display: none;"><div role="dialog" aria-modal="true" aria-label="同步数据" class="el-dialog el-dialog--center rTbaleDialog" style="margin-top: 15vh; width: 90%;"><div class="el-dialog__header"><span class="el-dialog__title">同步数据</span><!----></div><!----><div class="el-dialog__footer"><span class="dialog-footer"><button type="button" class="el-button el-button--default"><!----><!----><span>取 消</span></button> <button type="button" class="el-button el-button--primary"><!----><!----><span>确 定</span></button></span></div></div></div></div></div></li><li><span>逻辑显隐：</span> <div data-key="ShowHide_35" class="dplugin-box" plugin="[object Object]" style="margin-top: 0px; margin-bottom: 0px; text-align: left;"><!----></div></li><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <!----></div> <!----></div> <div class="wxformbtn m_start_btn"><!----> <div class="wxformbtn_center"><!----></div> <!----></div></div> </div>
     <script type="text/javascript">
     function time(){
     var date =  new Date();
     year = date.getFullYear();
     month = date.getMonth() + 1;
+    if (month < 10){
+        month = "0" + month;
+    }
     day = date.getDate();
+    if (day < 10){
+        day = "0" + day;
+    }
     hours = date.getHours();
+    if (hours < 10){
+        hours = "0" + hours;
+    }
     minutes = date.getMinutes();
-    seconds = date.getSeconds();
-    if(minutes < 10){
-        document.getElementById("time").innerHTML = year + "-" + month + "-" + day + "\t" + hours + ":0" + minutes;
+    if (minutes < 10){
+        minutes = "0" + minutes;
     }
-    else{
-        document.getElementById("time").innerHTML = year + "-" + month + "-" + day + "\t" + hours + ":" + minutes;
-    }
+    document.getElementById("time").innerHTML = year + "-" + month + "-" + day + "\t" + hours + ":" + minutes;
 
     };
     setInterval("time()",1000);
