--- a/templates/shenpi_submit.html
+++ b/templates/shenpi_submit.html
@@ -35,8 +35,8 @@
                 <div class="el-divider el-divider--horizontal">
                     <div class="el-divider__text is-center">去向</div>
                 </div>
-                <input type="radio" name="out" value="1" checked="checked">出
-                <input type="radio" name="out" value="0">入
+                <input type="radio" name="out" value="1">出
+                <input type="radio" name="out" value="0"  checked="checked">入
                 <br> <br>
                 </div>
 
